# datovka

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
datovka/: __init__.py  __main__.py
datovka/wsdl/: dbTypes.xsd  db_access.wsdl  dmBaseTypes.xsd  dm_info.wsdl  dm_operations.wsdl
examples/: 01_basic_connection.py  02_filtering_stats.py  03_download_messages.py  04_export_messages.py
tests/: test_datovka.py
