[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datovka"
version = "1.0.0"
description = "Python CLI a knihovna pro práci s českými datovými schránkami (ISDS)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["datovka", "isds", "czech", "databox", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "zeep>=4.0.0,<5.0.0",
    "python-dateutil>=2.8.0",
    "lxml>=4.9.0",
    "requests>=2.28.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
datovka = "datovka:cli_main"

[tool.setuptools]
packages = ["datovka"]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
datovka = ["wsdl/*.wsdl", "wsdl/*.xsd"]

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
