[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datovka"
version = "1.0.0"
description = "Python CLI a knihovna pro práci s českými datovými schránkami (ISDS)"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = {text = "MIT"}
keywords = ["datovka", "isds", "czech", "databox", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "zeep>=4.0.0,<5.0.0",
    "python-dateutil>=2.8.0",
    "lxml>=4.9.0",
    "python-dotenv>=0.19.0",
]

[project.scripts]
datovka = "datovka:CLI.main"

[tool.setuptools]
packages = ["datovka"]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
datovka = ["wsdl/*.wsdl", "wsdl/*.xsd"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
